--- a/dashboard.html
+++ b/dashboard.html
@@ -10,5 +10,26 @@
 </head>
 <body>
     
+    <nav>
+        <div class="navbar">
+            <div class="container nav-container">
+                <input class="checkbox" type="checkbox">
+                <div class="hamburguer-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                </div>
+                <div class="name">
+                    <h1><img src="imagem/4818818-logo-condicionador-de-ar-condicionado-simbolo-simbolo-quente-e-frio-simbolo-grátis-vetor.jpg" width="72px"></h1>
+                </div>
+                <div class="menu-items">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="cadastro.html">Cadastro</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                </div>
+            </div>
+        </div>
+        </nav>
 </body>
 </html>
