att da dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -7,29 +7,35 @@
     <title>Dashboard Weather Lover</title>
     <link rel="icon" href="imagem/índice.jpg">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/3f0399636b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
-    <nav>
-        <div class="navbar">
-            <div class="container nav-container">
-                <input class="checkbox" type="checkbox">
-                <div class="hamburguer-lines">
-                    <span class="line line1"></span>
-                    <span class="line line2"></span>
-                    <span class="line line3"></span>
-                </div>
-                <div class="name">
-                    <h1><img src="imagem/4818818-logo-condicionador-de-ar-condicionado-simbolo-simbolo-quente-e-frio-simbolo-grátis-vetor.jpg" width="72px"></h1>
-                </div>
-                <div class="menu-items">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="cadastro.html">Cadastro</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                </div>
-            </div>
-        </div>
-        </nav>
+<aside>
+    <p>Menu</p>
+    <a href="javascript:void(0)">
+    <i class="fa fa-user-o" aria-hidden="true"></i>
+    Minhas Estações
+</a>
+<a href="javascript:void(0)">
+    <i class="fa fa-user-o" aria-hidden="true"></i>
+   Sobre
+</a>
+
+<a href="javascript:void(0)">
+    <i class="fa fa-user-o" aria-hidden="true"></i>
+   Histórico Climático
+</a>
+
+<a href="javascript:void(0)">
+    <i class="fa fa-user-o" aria-hidden="true"></i>
+   Sair
+</a>
+<div class="social">
+    <a href="https://www.instagram.com/ewerton.lima.dev/" target="_blank">
+    <i class="fa-brands fa-instagram"></i>
+</a>
+</div>
+
+</aside>   
 </body>
 </html>
