--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Weather Lover</title>
     <link rel="icon" href="imagem/índice.jpg">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dashboard.css">
     <script src="https://kit.fontawesome.com/3f0399636b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -14,11 +14,11 @@
     <p>Menu</p>
     <a href="javascript:void(0)">
     <i class="fa fa-user-o" aria-hidden="true"></i>
-    Minhas Estações
+   Estações Favoritas
 </a>
 <a href="javascript:void(0)">
     <i class="fa fa-user-o" aria-hidden="true"></i>
-   Sobre
+   Previsão do Tempo
 </a>
 
 <a href="javascript:void(0)">
@@ -26,7 +26,7 @@
    Histórico Climático
 </a>
 
-<a href="javascript:void(0)">
+<a href="index.html">
     <i class="fa fa-user-o" aria-hidden="true"></i>
    Sair
 </a>
