--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
             </div>
         </div>
     </div>
+
     </nav>
+    <div class="banner">
+        <div class="container">
+            <h1>Nada Mais Belo que o Inverno em Nova York</h1>
+        </div>
+    </div>
+    
 </body>
 </html>
