--- a/contato.html
+++ b/contato.html
@@ -31,5 +31,10 @@
             </div>
         </div>
         </nav>
+       
+    <div class="banner">
+        <div class="container">
+        </div>
+    </div>
 </body>
 </html>
