--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="cadastro.html">Cadastro</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="estacao.html">Estação do Ano</a></li>
             </div>
         </div>
     </div>
