--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Weather Lover</title>
-    <link rel="icon" href="../public/css/img.css/Weather LOVER.png">
+    <link rel="icon" href="../public/css/img.css/Weather LOVER3.png">
     <link rel="stylesheet" href="../public/css/cadastro.css">
     <script src="https://kit.fontawesome.com/3f0399636b.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
@@ -22,7 +22,7 @@
                     <span class="line line3"></span>
                 </div>
                 <div class="name">
-                    <h1><img src="css/img.css/Weather LOVER.png" width="54px"></h1>
+                    <h1><img src="css/img.css/Weather LOVER3.png" width="70px"></h1>
                 </div>
                 <div class="menu-items">
                     <li><a href="index.html">Inicio</a></li>
@@ -42,7 +42,7 @@
                 <div class="form-control">
 
                     <h2 class="tittle">
-<center>                Cadastrar</center>    
+<center>             <b>  Cadastrar</b> </center>    
                     </h2>
 
 
@@ -99,9 +99,11 @@
                         
                         </select>
                         <br>
+                        <center>
                         <button onclick="cadastrar()">
                             Cadastrar
                         </button>
+                    </center>
 
 
                     </div>
