--- a/public/sobre.html
+++ b/public/sobre.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Weather Lover</title>
-    <link rel="icon" href="imagem/índice.jpg">
+    <link rel="icon" href="css/img.css/Weather LOVER3.png">
     <link rel="stylesheet" href="css/style.css">
     <script src="script.js"></script>
 </head>
@@ -21,7 +21,7 @@
                     <span class="line line3"></span>
                 </div>
                 <div class="name">
-                    <h1><img src="imagem/4818818-logo-condicionador-de-ar-condicionado-simbolo-simbolo-quente-e-frio-simbolo-grátis-vetor.jpg" width="72px"></h1>
+                    <h1><img src="css/img.css/Weather LOVER3.png" width="72px"></h1>
                 </div>
                 <div class="menu-items">
                     <li><a href="index.html">Inicio</a></li>
