--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Lover</title>
-    <link rel="icon" href="imagem/índice.jpg">
+    <link rel="icon" href="css/img.css/Weather LOVER3.png">
     <link rel="stylesheet" href="css/style.css">
   
 </head>
@@ -20,7 +20,7 @@
                 <span class="line line3"></span>
             </div>
             <div class="name">
-                <h1><img src="css/img.css/Weather LOVER.png" width="54px"></h1>
+                <h1><img src="css/img.css/Weather LOVER3.png" width="54px"></h1>
             </div>
             <div class="menu-items">
                 <li><a href="index.html">Inicio</a></li>
