--- a/public/estacao.html
+++ b/public/estacao.html
@@ -113,28 +113,28 @@ function estacao(){
     let posicao_geografica = select_hemisferio.value
 
     if(mes_ano < 3 && posicao_geografica == 13){
-        resultado.innerHTML = '<img src="css/img.css/estacao/índice.jpg" width="250px">'
+        resultado.innerHTML = '<img src="css/img.css/estacao/índice.jpg" width="230px"><br><h4>Inverno</h4>'
     }
     else if(mes_ano < 3 && posicao_geografica == 14){
-        resultado.innerHTML = '<img src="css/img.css/estacao/verao.jpg"  width="250px">'
+        resultado.innerHTML = '<img src="css/img.css/estacao/verao.jpg"  width="250px"><br><h4>Verão</h4>'
     }
     else if (mes_ano <6 && posicao_geografica == 13){
-        resultado.innerHTML = ' <img src="css/img.css/estacao/primavera.jpg" width="250px">'
+        resultado.innerHTML = ' <img src="css/img.css/estacao/primavera.jpg" width="250px"<br><h4> Primavera </h4>'
     }
     else if(mes_ano <6 && posicao_geografica == 14){
-        resultado.innerHTML = '<img src="css/img.css/estacao/outono.webp" width="250px">'
+        resultado.innerHTML = '<img src="css/img.css/estacao/outono.webp" width="250px"><br><h4>Outono</h4>'
     }
     else if(mes_ano <9 && posicao_geografica == 13){
-        resultado.innerHTML = '<img src="css/img.css/estacao/verao.jpg"  width="250px">'
+        resultado.innerHTML = '<img src="css/img.css/estacao/verao.jpg"  width="250px"><br><h4>Verão</h4>'
     }
     else if(mes_ano <9 && posicao_geografica == 14){
-        resultado.innerHTML = '<img src="css/img.css/estacao/índice.jpg" width="250px">'
+        resultado.innerHTML = '<img src="css/img.css/estacao/índice.jpg" width="230px"><br><h4>Inverno</h4>'
     }
     else if(mes_ano < 12 && posicao_geografica == 13){
-        resultado.innerHTML = '<img src="css/img.css/estacao/outono.webp" width="250px">'
+        resultado.innerHTML = '<img src="css/img.css/estacao/outono.webp" width="250px"><br><h4>Outono</h4>'
     }
     else {
-        resultado.innerHTML = '<img src="css/img.css/estacao/primavera.jpg"  width="250px">'
+        resultado.innerHTML = '<img src="css/img.css/estacao/primavera.jpg"  width="250px"><br><h4>Primavera</h4>'
     }
 
 }
