tela de cadastro e login css finalizado

--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Weather Lover</title>
     <link rel="icon" href="css/img.css/Weather LOVER3.png">
-    <link rel="stylesheet" href="css/cadastro.css">
+    <link rel="stylesheet" href="css/login.css">
     <script src="script.js"></script>
 </head>
 <body>
