--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -48,7 +48,7 @@
 
 
                 
-                    <img src="css/img.css/índice.png" width="25px">
+                    <img src="gerador-nomes-de-usuario.png" width="25px">
 
                     
 
