--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -33,7 +33,7 @@
     <i class="fa fa-user-o" aria-hidden="true"></i>
    Estações Favoritas
 </a>
-<a href="javascript:void(0)">
+<a href="previsaodotempo.html">
     <i class="fa fa-user-o" aria-hidden="true"></i>
    Previsão do Tempo
 </a>
