--- a/public/historico.html
+++ b/public/historico.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Previsão do Tempo</title>
-    <link rel="stylesheet" href="css/previsao.css">
+    <title>Histórico Climático</title>
+    <link rel="stylesheet" href="css/dashboard.css">
     <script src="https://kit.fontawesome.com/3f0399636b.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    
     
     <div class="navbar">
         <div class="container">
