--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Weather Lover</title>
-    <link rel="icon" href="css/img.css/Weather LOVER3.png">
+    <link rel="stylesheet" href="css/dashboard/download.png">
     <link rel="stylesheet" href="css/dashboard.css">
     <script src="https://kit.fontawesome.com/3f0399636b.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
