add neve no script da tag head para animação

--- a/public/estacao.html
+++ b/public/estacao.html
@@ -7,6 +7,7 @@
     <title>Estações do Ano</title>
     <link rel="stylesheet" href="css/estacao.css">
     <link rel="stylesheet" href="css/img.css/Weather LOVER3.png">
+    <script type="text/javascript" src="https://cdn3.professor-falken.com/recursos/js/snowstorm.js"></script>
 </head>
 <body>
     
