--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Weather Lover</title>
     <link rel="icon" href="css/img.css/Weather LOVER3.png">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="https://cdn3.professor-falken.com/recursos/js/snowstorm.js"></script>
   
 </head>
 <body>
