--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,7 @@
     <title>Login Weather Lover</title>
     <link rel="icon" href="css/img.css/Weather LOVER3.png">
     <link rel="stylesheet" href="css/login.css">
-    <script src="script.js"></script>
+    <script type="text/javascript" src="https://cdn3.professor-falken.com/recursos/js/snowstorm.js"></script>
 </head>
 <body>
     
