--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../public/css/img.css/Weather LOVER3.png">
     <link rel="stylesheet" href="../public/css/cadastro.css">
     <script src="https://kit.fontawesome.com/3f0399636b.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn3.professor-falken.com/recursos/js/snowstorm.js"></script>
    
 </head>
 <body>
