--- a/public/contato.html
+++ b/public/contato.html
@@ -7,6 +7,7 @@
     <title>Contato Weather Lover</title>
     <link rel="icon" href="css/img.css/Weather LOVER3.png">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="https://cdn3.professor-falken.com/recursos/js/snowstorm.js"></script>
 </head>
 <body>
     
