--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/dashboard/download.png">
     <link rel="stylesheet" href="css/dashboard.css">
     <script src="https://kit.fontawesome.com/3f0399636b.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script type="text/javascript" src="https://cdn3.professor-falken.com/recursos/js/snowstorm.js"></script>
+    
 </head>
 <body>
     <div class="navbar">
