--- a/public/previsaodotempo.html
+++ b/public/previsaodotempo.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/previsao.css">
     <script src="https://kit.fontawesome.com/3f0399636b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/dashboard/download.png">
+    <script type="text/javascript" src="https://cdn3.professor-falken.com/recursos/js/snowstorm.js"></script>
 </head>
 <body>
     
